add font text-shadow

--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -116,6 +116,7 @@ footer
 .container
   +container
   // +susy-grid-background
+  +text-shadow(0px 0px 1px rgba(0,0,0,0.3))
 
 .intro-past-wrapper, .intro-now-wrapper
   +span-columns(12)
