--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -711,6 +711,7 @@ body {
   padding-right: 0.5em;
   margin-left: auto;
   margin-right: auto;
+  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3);
 }
 /* line 38, ../../../../../../Applications/Fire.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .container:after {
@@ -719,7 +720,7 @@ body {
   clear: both;
 }
 
-/* line 120, ../sass/partials/_page.sass */
+/* line 121, ../sass/partials/_page.sass */
 .intro-past-wrapper, .intro-now-wrapper {
   width: 100%;
   float: left;
@@ -727,28 +728,28 @@ body {
   display: inline;
 }
 
-/* line 123, ../sass/partials/_page.sass */
+/* line 124, ../sass/partials/_page.sass */
 .article-content {
   padding-left: 1em;
   line-height: 1.5em;
 }
-/* line 126, ../sass/partials/_page.sass */
+/* line 127, ../sass/partials/_page.sass */
 .article-content strong {
   font-weight: bold;
   font-size: 1.2em;
 }
 
-/* line 129, ../sass/partials/_page.sass */
+/* line 130, ../sass/partials/_page.sass */
 .slogan-content {
   line-height: 1.5em;
 }
-/* line 131, ../sass/partials/_page.sass */
+/* line 132, ../sass/partials/_page.sass */
 .slogan-content strong {
   font-size: 24px;
   line-height: 1.5em;
 }
 
-/* line 135, ../sass/partials/_page.sass */
+/* line 136, ../sass/partials/_page.sass */
 .intro-past {
   width: 100%;
   float: left;
@@ -760,7 +761,7 @@ body {
   padding: 2em;
 }
 @media (min-width: 48em) {
-  /* line 135, ../sass/partials/_page.sass */
+  /* line 136, ../sass/partials/_page.sass */
   .intro-past {
     width: 49.15254%;
     float: left;
@@ -768,11 +769,11 @@ body {
   }
 }
 
-/* line 142, ../sass/partials/_page.sass */
+/* line 143, ../sass/partials/_page.sass */
 .intro-products {
   background: #00c0f7;
 }
-/* line 144, ../sass/partials/_page.sass */
+/* line 145, ../sass/partials/_page.sass */
 .intro-products .title-wrapper {
   width: 100%;
   float: left;
@@ -784,7 +785,7 @@ body {
   padding-top: 2em;
   padding-left: 2em;
 }
-/* line 149, ../sass/partials/_page.sass */
+/* line 150, ../sass/partials/_page.sass */
 .intro-products .wesing-img, .intro-products .sns-img {
   display: block;
   width: 280px;
@@ -796,7 +797,7 @@ body {
   background-size: cover;
   margin: 0 auto;
 }
-/* line 156, ../sass/partials/_page.sass */
+/* line 157, ../sass/partials/_page.sass */
 .intro-products .sns-img {
   width: 240px;
   height: 240px;
@@ -808,7 +809,7 @@ body {
   border-radius: 20%;
 }
 
-/* line 163, ../sass/partials/_page.sass */
+/* line 164, ../sass/partials/_page.sass */
 .intro-sns, .intro-wesing {
   width: 100%;
   float: left;
@@ -820,20 +821,20 @@ body {
   padding: 2em;
 }
 @media (min-width: 48em) {
-  /* line 163, ../sass/partials/_page.sass */
+  /* line 164, ../sass/partials/_page.sass */
   .intro-sns, .intro-wesing {
     width: 49.15254%;
     float: left;
     margin-right: 1.69492%;
   }
 }
-/* line 169, ../sass/partials/_page.sass */
+/* line 170, ../sass/partials/_page.sass */
 .intro-sns p, .intro-wesing p {
   margin-bottom: 2em;
 }
 
 @media (min-width: 48em) {
-  /* line 171, ../sass/partials/_page.sass */
+  /* line 172, ../sass/partials/_page.sass */
   .intro-wesing {
     width: 49.15254%;
     float: right;
@@ -841,7 +842,7 @@ body {
   }
 }
 
-/* line 175, ../sass/partials/_page.sass */
+/* line 176, ../sass/partials/_page.sass */
 .intro-team, .intro-plan-marketing, .apply-form-wrapper {
   width: 100%;
   float: left;
@@ -853,7 +854,7 @@ body {
   padding: 2em;
 }
 
-/* line 179, ../sass/partials/_page.sass */
+/* line 180, ../sass/partials/_page.sass */
 .intro-slogan {
   width: 100%;
   float: left;
@@ -866,7 +867,7 @@ body {
   text-align: center;
 }
 
-/* line 185, ../sass/partials/_page.sass */
+/* line 186, ../sass/partials/_page.sass */
 .intro-past-img {
   width: 100%;
   float: left;
@@ -876,7 +877,7 @@ body {
   position: relative;
 }
 @media (min-width: 48em) {
-  /* line 185, ../sass/partials/_page.sass */
+  /* line 186, ../sass/partials/_page.sass */
   .intro-past-img {
     width: 49.15254%;
     float: right;
@@ -884,28 +885,28 @@ body {
   }
 }
 
-/* line 192, ../sass/partials/_page.sass */
+/* line 193, ../sass/partials/_page.sass */
 #bd1 {
   position: absolute;
   right: 10%;
   top: 30px;
 }
 
-/* line 197, ../sass/partials/_page.sass */
+/* line 198, ../sass/partials/_page.sass */
 #vs2 {
   position: absolute;
   top: 100px;
   left: 10%;
 }
 
-/* line 202, ../sass/partials/_page.sass */
+/* line 203, ../sass/partials/_page.sass */
 #mds655 {
   position: absolute;
   top: 180px;
   right: 10%;
 }
 
-/* line 207, ../sass/partials/_page.sass */
+/* line 208, ../sass/partials/_page.sass */
 .location-wrapper {
   width: 100%;
   float: left;
@@ -913,7 +914,7 @@ body {
   display: inline;
   background: white;
 }
-/* line 210, ../sass/partials/_page.sass */
+/* line 211, ../sass/partials/_page.sass */
 .location-wrapper .title-wrapper {
   width: 100%;
   float: left;
@@ -924,7 +925,7 @@ body {
   box-sizing: border-box;
   padding: 2em;
 }
-/* line 214, ../sass/partials/_page.sass */
+/* line 215, ../sass/partials/_page.sass */
 .location-wrapper .map-wrapper {
   width: 100%;
   float: left;
@@ -933,7 +934,7 @@ body {
   margin-bottom: 50px;
 }
 
-/* line 217, ../sass/partials/_page.sass */
+/* line 218, ../sass/partials/_page.sass */
 #map_canvas {
   width: 80%;
   height: 400px;
@@ -941,17 +942,17 @@ body {
   margin: 0 auto;
 }
 
-/* line 223, ../sass/partials/_page.sass */
+/* line 224, ../sass/partials/_page.sass */
 .plan-marketing {
   background: #c0c4ce;
 }
 
-/* line 225, ../sass/partials/_page.sass */
+/* line 226, ../sass/partials/_page.sass */
 .front-end {
   background: #c5cad4;
 }
 
-/* line 228, ../sass/partials/_page.sass */
+/* line 229, ../sass/partials/_page.sass */
 .will-learn {
   width: 100%;
   float: left;
@@ -959,17 +960,17 @@ body {
   display: inline;
 }
 
-/* line 230, ../sass/partials/_page.sass */
+/* line 231, ../sass/partials/_page.sass */
 .work-detail, .work-apply {
   background: #ec5e21;
 }
 
-/* line 233, ../sass/partials/_page.sass */
+/* line 234, ../sass/partials/_page.sass */
 h1.title {
   text-align: center;
 }
 
-/* line 235, ../sass/partials/_page.sass */
+/* line 236, ../sass/partials/_page.sass */
 .training-title {
   width: 100%;
   float: left;
@@ -978,7 +979,7 @@ h1.title {
   text-align: center;
 }
 
-/* line 238, ../sass/partials/_page.sass */
+/* line 239, ../sass/partials/_page.sass */
 .training-wrapper {
   width: 100%;
   float: left;
@@ -990,13 +991,13 @@ h1.title {
   padding: 1em 3em;
 }
 @media (min-width: 48em) {
-  /* line 238, ../sass/partials/_page.sass */
+  /* line 239, ../sass/partials/_page.sass */
   .training-wrapper {
     width: 49.15254%;
     float: left;
     margin-right: 1.69492%;
   }
-  /* line 242, ../sass/partials/_page.sass */
+  /* line 243, ../sass/partials/_page.sass */
   .training-wrapper:nth-child(2n) {
     width: 49.15254%;
     float: right;
@@ -1004,36 +1005,36 @@ h1.title {
   }
 }
 @media (min-width: 64em) {
-  /* line 238, ../sass/partials/_page.sass */
+  /* line 239, ../sass/partials/_page.sass */
   .training-wrapper {
     width: 32.20339%;
     float: left;
     margin-right: 1.69492%;
   }
-  /* line 246, ../sass/partials/_page.sass */
+  /* line 247, ../sass/partials/_page.sass */
   .training-wrapper:nth-child(2n) {
     width: 32.20339%;
     float: left;
     margin-right: 1.69492%;
   }
-  /* line 248, ../sass/partials/_page.sass */
+  /* line 249, ../sass/partials/_page.sass */
   .training-wrapper:nth-child(3n) {
     width: 32.20339%;
     float: right;
     margin-right: 0;
   }
 }
-/* line 252, ../sass/partials/_page.sass */
+/* line 253, ../sass/partials/_page.sass */
 .training-wrapper .training-subtitle {
   text-align: center;
   margin-top: 1em;
   font-size: 1.5em;
 }
-/* line 256, ../sass/partials/_page.sass */
+/* line 257, ../sass/partials/_page.sass */
 .training-wrapper .training {
   position: relative;
 }
-/* line 259, ../sass/partials/_page.sass */
+/* line 260, ../sass/partials/_page.sass */
 .training-wrapper .training:hover .front {
   z-index: 900;
   -webkit-transform: rotateY(180deg);
@@ -1042,7 +1043,7 @@ h1.title {
   -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
-/* line 262, ../sass/partials/_page.sass */
+/* line 263, ../sass/partials/_page.sass */
 .training-wrapper .training:hover .back {
   z-index: 1000;
   -webkit-transform: rotateX(0deg);
@@ -1056,7 +1057,7 @@ h1.title {
   -o-transform: rotateY(0deg);
   transform: rotateY(0deg);
 }
-/* line 266, ../sass/partials/_page.sass */
+/* line 267, ../sass/partials/_page.sass */
 .training-wrapper .front, .training-wrapper .back {
   z-index: 900;
   width: 100%;
@@ -1088,7 +1089,7 @@ h1.title {
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
-/* line 277, ../sass/partials/_page.sass */
+/* line 278, ../sass/partials/_page.sass */
 .training-wrapper .front.thinking, .training-wrapper .back.thinking {
   background: url(../images/thinking.jpg);
   -webkit-background-size: cover;
@@ -1096,7 +1097,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 280, ../sass/partials/_page.sass */
+/* line 281, ../sass/partials/_page.sass */
 .training-wrapper .front.browser, .training-wrapper .back.browser {
   background: url(../images/browser.png);
   background-color: #333333;
@@ -1107,7 +1108,7 @@ h1.title {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-/* line 286, ../sass/partials/_page.sass */
+/* line 287, ../sass/partials/_page.sass */
 .training-wrapper .front.wireframe, .training-wrapper .back.wireframe {
   background: url(../images/wireframe.jpg);
   -webkit-background-size: cover;
@@ -1115,7 +1116,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 289, ../sass/partials/_page.sass */
+/* line 290, ../sass/partials/_page.sass */
 .training-wrapper .front.git, .training-wrapper .back.git {
   background: url(../images/Octocat.png);
   background-color: white;
@@ -1126,7 +1127,7 @@ h1.title {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-/* line 295, ../sass/partials/_page.sass */
+/* line 296, ../sass/partials/_page.sass */
 .training-wrapper .front.angular, .training-wrapper .back.angular {
   background: url(../images/AngularJS.png);
   background-color: white;
@@ -1137,7 +1138,7 @@ h1.title {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-/* line 301, ../sass/partials/_page.sass */
+/* line 302, ../sass/partials/_page.sass */
 .training-wrapper .front.code, .training-wrapper .back.code {
   background: url(../images/code.png);
   -webkit-background-size: cover;
@@ -1145,7 +1146,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 304, ../sass/partials/_page.sass */
+/* line 305, ../sass/partials/_page.sass */
 .training-wrapper .front.laravel, .training-wrapper .back.laravel {
   background: url(../images/laravel.png);
   -webkit-background-size: 100%;
@@ -1154,7 +1155,7 @@ h1.title {
   background-size: 100%;
   background-position: 50% 50%;
 }
-/* line 308, ../sass/partials/_page.sass */
+/* line 309, ../sass/partials/_page.sass */
 .training-wrapper .front.aws, .training-wrapper .back.aws {
   background: url(../images/aws.png);
   -webkit-background-size: cover;
@@ -1162,7 +1163,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 311, ../sass/partials/_page.sass */
+/* line 312, ../sass/partials/_page.sass */
 .training-wrapper .front.mongo, .training-wrapper .back.mongo {
   background: url(../images/mongo.png);
   -webkit-background-size: cover;
@@ -1170,7 +1171,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 314, ../sass/partials/_page.sass */
+/* line 315, ../sass/partials/_page.sass */
 .training-wrapper .back {
   z-index: 1000;
   -webkit-backface-visibility: hidden;
@@ -1197,19 +1198,19 @@ h1.title {
   left: 0;
   color: white;
 }
-/* line 324, ../sass/partials/_page.sass */
+/* line 325, ../sass/partials/_page.sass */
 .training-wrapper .back.first {
   background: #ff7e70;
 }
-/* line 326, ../sass/partials/_page.sass */
+/* line 327, ../sass/partials/_page.sass */
 .training-wrapper .back.second {
   background: #51adf0;
 }
-/* line 328, ../sass/partials/_page.sass */
+/* line 329, ../sass/partials/_page.sass */
 .training-wrapper .back.third {
   background: #5dd06a;
 }
-/* line 331, ../sass/partials/_page.sass */
+/* line 332, ../sass/partials/_page.sass */
 .training-wrapper .back-content {
   position: absolute;
   top: 50%;
@@ -1220,32 +1221,32 @@ h1.title {
   padding: 2em;
 }
 
-/* line 338, ../sass/partials/_page.sass */
+/* line 339, ../sass/partials/_page.sass */
 .ss-form {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 340, ../sass/partials/_page.sass */
+/* line 341, ../sass/partials/_page.sass */
 .ss-form input {
   width: 100%;
   height: 24px;
 }
-/* line 343, ../sass/partials/_page.sass */
+/* line 344, ../sass/partials/_page.sass */
 .ss-form textarea {
   width: 100%;
 }
-/* line 345, ../sass/partials/_page.sass */
+/* line 346, ../sass/partials/_page.sass */
 .ss-form .ss-form-entry {
   margin-bottom: 1em;
 }
-/* line 347, ../sass/partials/_page.sass */
+/* line 348, ../sass/partials/_page.sass */
 .ss-form .required-message {
   font-size: 12px;
   margin-top: 5px;
 }
 
-/* line 350, ../sass/partials/_page.sass */
+/* line 351, ../sass/partials/_page.sass */
 #ss-submit {
   font-size: 1.5em;
   width: 200px;
@@ -1258,7 +1259,7 @@ h1.title {
   -moz-box-shadow: inset 0px -5px 0px #38c248;
   box-shadow: inset 0px -5px 0px #38c248;
 }
-/* line 359, ../sass/partials/_page.sass */
+/* line 360, ../sass/partials/_page.sass */
 #ss-submit:hover {
   -webkit-transform: translateY(2px);
   -moz-transform: translateY(2px);
@@ -1270,7 +1271,7 @@ h1.title {
   box-shadow: inset 0px -3px 0px #38c248;
 }
 
-/* line 363, ../sass/partials/_page.sass */
+/* line 364, ../sass/partials/_page.sass */
 #footer {
   font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-align: center;
@@ -1281,7 +1282,7 @@ h1.title {
   color: #f1f1f1;
   background: #20273c;
 }
-/* line 370, ../sass/partials/_page.sass */
+/* line 371, ../sass/partials/_page.sass */
 #footer a {
   color: white;
 }
