modify just font script css font-family

--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -14,7 +14,7 @@ body, select, input, textarea
 //-----------------------------------
 
 body
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+  font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
 #container
 
 header
@@ -362,7 +362,7 @@ h1.title
     +box-shadow(inset 0px -3px 0px darken(#5DD06A, 10%))
 
 #footer
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+  font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   text-align: center
   +box-sizing(border-box)
   padding: 1em 0
