--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -349,6 +349,7 @@ h1.title
     font-size: 12px
     margin-top: 5px
 #ss-submit
+  font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   font-size: 1.5em
   width: 200px
   height: 40px
