--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1248,6 +1248,7 @@ h1.title {
 
 /* line 351, ../sass/partials/_page.sass */
 #ss-submit {
+  font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 1.5em;
   width: 200px;
   height: 40px;
@@ -1259,7 +1260,7 @@ h1.title {
   -moz-box-shadow: inset 0px -5px 0px #38c248;
   box-shadow: inset 0px -5px 0px #38c248;
 }
-/* line 360, ../sass/partials/_page.sass */
+/* line 361, ../sass/partials/_page.sass */
 #ss-submit:hover {
   -webkit-transform: translateY(2px);
   -moz-transform: translateY(2px);
@@ -1271,7 +1272,7 @@ h1.title {
   box-shadow: inset 0px -3px 0px #38c248;
 }
 
-/* line 364, ../sass/partials/_page.sass */
+/* line 365, ../sass/partials/_page.sass */
 #footer {
   font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-align: center;
@@ -1282,7 +1283,7 @@ h1.title {
   color: #f1f1f1;
   background: #20273c;
 }
-/* line 371, ../sass/partials/_page.sass */
+/* line 372, ../sass/partials/_page.sass */
 #footer a {
   color: white;
 }
