modify justfont script

--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -23,6 +23,16 @@ header
 
 footer
 
+.jf-loading body
+  opacity: 0
+  visibility: hidden
+.jf-active body
+  opacity: 1
+  visibility: visible
+.jf-inactive body
+  opacity: 1
+  visibility: visible
+
 #navigation-menu
   position: fixed
   width: 100%
