--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -348,7 +348,7 @@ h1.title
 
 .ss-form
   +box-sizing(border-box)
-  input
+  input[type="text"]
     width: 100%
     height: 24px
   textarea
@@ -358,6 +358,8 @@ h1.title
   .required-message
     font-size: 12px
     margin-top: 5px
+.ss-choice-item
+  list-style: none
 #ss-submit
   font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   font-size: 1.5em
