update deadline time

--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -383,3 +383,9 @@ h1.title
   background: #20273c
   a
     color: #fff
+.intro-time
+  +box-sizing(border-box)
+  padding: 2em
+  li
+    +inline-block()
+    min-width: 240px
