--- a/sass/partials/_page.sass
+++ b/sass/partials/_page.sass
@@ -231,6 +231,8 @@ footer
   background: #ccc
   margin: 0 auto
 
+#result
+  background: #5dd06a
 .plan-marketing
   background: #C0C4CE
 .front-end
@@ -383,7 +385,7 @@ h1.title
   background: #20273c
   a
     color: #fff
-.intro-time
+.intro-time, .result-update
   +box-sizing(border-box)
   padding: 2em
   li
