--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -961,16 +961,21 @@ body {
 }
 
 /* line 234, ../sass/partials/_page.sass */
+#result {
+  background: #5dd06a;
+}
+
+/* line 236, ../sass/partials/_page.sass */
 .plan-marketing {
   background: #c0c4ce;
 }
 
-/* line 236, ../sass/partials/_page.sass */
+/* line 238, ../sass/partials/_page.sass */
 .front-end {
   background: #c5cad4;
 }
 
-/* line 239, ../sass/partials/_page.sass */
+/* line 241, ../sass/partials/_page.sass */
 .will-learn {
   width: 100%;
   float: left;
@@ -978,17 +983,17 @@ body {
   display: inline;
 }
 
-/* line 241, ../sass/partials/_page.sass */
+/* line 243, ../sass/partials/_page.sass */
 .work-detail, .work-apply {
   background: #ec5e21;
 }
 
-/* line 244, ../sass/partials/_page.sass */
+/* line 246, ../sass/partials/_page.sass */
 h1.title {
   text-align: center;
 }
 
-/* line 246, ../sass/partials/_page.sass */
+/* line 248, ../sass/partials/_page.sass */
 .training-title {
   width: 100%;
   float: left;
@@ -997,7 +1002,7 @@ h1.title {
   text-align: center;
 }
 
-/* line 249, ../sass/partials/_page.sass */
+/* line 251, ../sass/partials/_page.sass */
 .training-wrapper {
   width: 100%;
   float: left;
@@ -1009,13 +1014,13 @@ h1.title {
   padding: 1em 3em;
 }
 @media (min-width: 48em) {
-  /* line 249, ../sass/partials/_page.sass */
+  /* line 251, ../sass/partials/_page.sass */
   .training-wrapper {
     width: 49.15254%;
     float: left;
     margin-right: 1.69492%;
   }
-  /* line 253, ../sass/partials/_page.sass */
+  /* line 255, ../sass/partials/_page.sass */
   .training-wrapper:nth-child(2n) {
     width: 49.15254%;
     float: right;
@@ -1023,36 +1028,36 @@ h1.title {
   }
 }
 @media (min-width: 64em) {
-  /* line 249, ../sass/partials/_page.sass */
+  /* line 251, ../sass/partials/_page.sass */
   .training-wrapper {
     width: 32.20339%;
     float: left;
     margin-right: 1.69492%;
   }
-  /* line 257, ../sass/partials/_page.sass */
+  /* line 259, ../sass/partials/_page.sass */
   .training-wrapper:nth-child(2n) {
     width: 32.20339%;
     float: left;
     margin-right: 1.69492%;
   }
-  /* line 259, ../sass/partials/_page.sass */
+  /* line 261, ../sass/partials/_page.sass */
   .training-wrapper:nth-child(3n) {
     width: 32.20339%;
     float: right;
     margin-right: 0;
   }
 }
-/* line 263, ../sass/partials/_page.sass */
+/* line 265, ../sass/partials/_page.sass */
 .training-wrapper .training-subtitle {
   text-align: center;
   margin-top: 1em;
   font-size: 1.5em;
 }
-/* line 267, ../sass/partials/_page.sass */
+/* line 269, ../sass/partials/_page.sass */
 .training-wrapper .training {
   position: relative;
 }
-/* line 270, ../sass/partials/_page.sass */
+/* line 272, ../sass/partials/_page.sass */
 .training-wrapper .training:hover .front {
   z-index: 900;
   -webkit-transform: rotateY(180deg);
@@ -1061,7 +1066,7 @@ h1.title {
   -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
-/* line 273, ../sass/partials/_page.sass */
+/* line 275, ../sass/partials/_page.sass */
 .training-wrapper .training:hover .back {
   z-index: 1000;
   -webkit-transform: rotateX(0deg);
@@ -1075,7 +1080,7 @@ h1.title {
   -o-transform: rotateY(0deg);
   transform: rotateY(0deg);
 }
-/* line 277, ../sass/partials/_page.sass */
+/* line 279, ../sass/partials/_page.sass */
 .training-wrapper .front, .training-wrapper .back {
   z-index: 900;
   width: 100%;
@@ -1107,7 +1112,7 @@ h1.title {
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
-/* line 288, ../sass/partials/_page.sass */
+/* line 290, ../sass/partials/_page.sass */
 .training-wrapper .front.thinking, .training-wrapper .back.thinking {
   background: url(../images/thinking.jpg);
   -webkit-background-size: cover;
@@ -1115,7 +1120,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 291, ../sass/partials/_page.sass */
+/* line 293, ../sass/partials/_page.sass */
 .training-wrapper .front.browser, .training-wrapper .back.browser {
   background: url(../images/browser.png);
   background-color: #333333;
@@ -1126,7 +1131,7 @@ h1.title {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-/* line 297, ../sass/partials/_page.sass */
+/* line 299, ../sass/partials/_page.sass */
 .training-wrapper .front.wireframe, .training-wrapper .back.wireframe {
   background: url(../images/wireframe.jpg);
   -webkit-background-size: cover;
@@ -1134,7 +1139,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 300, ../sass/partials/_page.sass */
+/* line 302, ../sass/partials/_page.sass */
 .training-wrapper .front.git, .training-wrapper .back.git {
   background: url(../images/Octocat.png);
   background-color: white;
@@ -1145,7 +1150,7 @@ h1.title {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-/* line 306, ../sass/partials/_page.sass */
+/* line 308, ../sass/partials/_page.sass */
 .training-wrapper .front.angular, .training-wrapper .back.angular {
   background: url(../images/AngularJS.png);
   background-color: white;
@@ -1156,7 +1161,7 @@ h1.title {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-/* line 312, ../sass/partials/_page.sass */
+/* line 314, ../sass/partials/_page.sass */
 .training-wrapper .front.code, .training-wrapper .back.code {
   background: url(../images/code.png);
   -webkit-background-size: cover;
@@ -1164,7 +1169,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 315, ../sass/partials/_page.sass */
+/* line 317, ../sass/partials/_page.sass */
 .training-wrapper .front.laravel, .training-wrapper .back.laravel {
   background: url(../images/laravel.png);
   -webkit-background-size: 100%;
@@ -1173,7 +1178,7 @@ h1.title {
   background-size: 100%;
   background-position: 50% 50%;
 }
-/* line 319, ../sass/partials/_page.sass */
+/* line 321, ../sass/partials/_page.sass */
 .training-wrapper .front.aws, .training-wrapper .back.aws {
   background: url(../images/aws.png);
   -webkit-background-size: cover;
@@ -1181,7 +1186,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 322, ../sass/partials/_page.sass */
+/* line 324, ../sass/partials/_page.sass */
 .training-wrapper .front.mongo, .training-wrapper .back.mongo {
   background: url(../images/mongo.png);
   -webkit-background-size: cover;
@@ -1189,7 +1194,7 @@ h1.title {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 325, ../sass/partials/_page.sass */
+/* line 327, ../sass/partials/_page.sass */
 .training-wrapper .back {
   z-index: 1000;
   -webkit-backface-visibility: hidden;
@@ -1216,19 +1221,19 @@ h1.title {
   left: 0;
   color: white;
 }
-/* line 335, ../sass/partials/_page.sass */
+/* line 337, ../sass/partials/_page.sass */
 .training-wrapper .back.first {
   background: #ff7e70;
 }
-/* line 337, ../sass/partials/_page.sass */
+/* line 339, ../sass/partials/_page.sass */
 .training-wrapper .back.second {
   background: #51adf0;
 }
-/* line 339, ../sass/partials/_page.sass */
+/* line 341, ../sass/partials/_page.sass */
 .training-wrapper .back.third {
   background: #5dd06a;
 }
-/* line 342, ../sass/partials/_page.sass */
+/* line 344, ../sass/partials/_page.sass */
 .training-wrapper .back-content {
   position: absolute;
   top: 50%;
@@ -1239,37 +1244,37 @@ h1.title {
   padding: 2em;
 }
 
-/* line 349, ../sass/partials/_page.sass */
+/* line 351, ../sass/partials/_page.sass */
 .ss-form {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 351, ../sass/partials/_page.sass */
+/* line 353, ../sass/partials/_page.sass */
 .ss-form input[type="text"] {
   width: 100%;
   height: 24px;
 }
-/* line 354, ../sass/partials/_page.sass */
+/* line 356, ../sass/partials/_page.sass */
 .ss-form textarea {
   width: 100%;
 }
-/* line 356, ../sass/partials/_page.sass */
+/* line 358, ../sass/partials/_page.sass */
 .ss-form .ss-form-entry {
   margin-bottom: 1em;
 }
-/* line 358, ../sass/partials/_page.sass */
+/* line 360, ../sass/partials/_page.sass */
 .ss-form .required-message {
   font-size: 12px;
   margin-top: 5px;
 }
 
-/* line 361, ../sass/partials/_page.sass */
+/* line 363, ../sass/partials/_page.sass */
 .ss-choice-item {
   list-style: none;
 }
 
-/* line 363, ../sass/partials/_page.sass */
+/* line 365, ../sass/partials/_page.sass */
 #ss-submit {
   font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 1.5em;
@@ -1283,7 +1288,7 @@ h1.title {
   -moz-box-shadow: inset 0px -5px 0px #38c248;
   box-shadow: inset 0px -5px 0px #38c248;
 }
-/* line 373, ../sass/partials/_page.sass */
+/* line 375, ../sass/partials/_page.sass */
 #ss-submit:hover {
   -webkit-transform: translateY(2px);
   -moz-transform: translateY(2px);
@@ -1295,7 +1300,7 @@ h1.title {
   box-shadow: inset 0px -3px 0px #38c248;
 }
 
-/* line 377, ../sass/partials/_page.sass */
+/* line 379, ../sass/partials/_page.sass */
 #footer {
   font-family: \5FAE\8EDF\6B63\9ED1\9AD4, \65B0\7D30\660E\9AD4, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-align: center;
@@ -1306,20 +1311,20 @@ h1.title {
   color: #f1f1f1;
   background: #20273c;
 }
-/* line 384, ../sass/partials/_page.sass */
+/* line 386, ../sass/partials/_page.sass */
 #footer a {
   color: white;
 }
 
-/* line 386, ../sass/partials/_page.sass */
-.intro-time {
+/* line 388, ../sass/partials/_page.sass */
+.intro-time, .result-update {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 2em;
 }
-/* line 389, ../sass/partials/_page.sass */
-.intro-time li {
+/* line 391, ../sass/partials/_page.sass */
+.intro-time li, .result-update li {
   display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
